<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:checked="true"
            android:icon="@drawable/magnify"
            android:title="@string/nav_search_title" />
        <item
            android:id="@+id/nav_history"
            android:checked="true"
            android:icon="@drawable/wunderlist"
            android:title="@string/nav_history_title" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings_title" />
    </group>

    <item android:title="@string/nav_network_title">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_variant"
                android:title="@string/nav_share_title" />
        </menu>
    </item>

</menu>
